compiler/testData/diagnostics/tests/backingField/FieldInInterface.kt
interface My {
    <!BACKING_FIELD_IN_INTERFACE!>val x: Int<!> = <!PROPERTY_INITIALIZER_IN_INTERFACE!>0<!>
        get() = field
}
